--- a/front-end/src/app/pages/homepage/homepage.component.html
+++ b/front-end/src/app/pages/homepage/homepage.component.html
@@ -11,5 +11,34 @@
     <button mat-menu-item>Groups</button>
     <button mat-menu-item>Profile</button>
   </mat-menu>
+<div>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="points">
+      <th mat-header-cell *matHeaderCellDef> Points </th>
+      <td mat-cell *matCellDef="let element"> {{element.points}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="species">
+      <th mat-header-cell *matHeaderCellDef> Species </th>
+      <td mat-cell *matCellDef="let element"> {{element.species}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef> Weight </th>
+      <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+    </ng-container>
+  
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  </div>
   <button mat-raised-button [routerLink]="'/catchPage'">CAUGHT ONE!</button>
 </div>
